fix text-alignment for heading

--- a/public/global.css
+++ b/public/global.css
@@ -95,6 +95,7 @@ button:focus {
 .between {
 	justify-content: space-between;
 	align-items: center;
+	flex-wrap: nowrap;
 }
 
 .phrase {
